test/expected/explain_yo_exclam_k_b.out
explain bool operator!(S) final
           ^
12: error: member operator ! must have exactly 0 parameters
